# SINPUT-LIB-HID

./: CMakeLists.txt  IMPLEMENTATION.md  LICENSE  README.md  sinput_lib.c  sinput_lib_config.c  sinput_lib_hid.c  sinput_lib_protocol.c
include/: sinput_lib.h  sinput_lib_config.h  sinput_lib_hid.h  sinput_lib_protocol.h  sinput_lib_types.h
